--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ params:
   room_location: "Blackboard Collaborate"
   address: "Remote"
   date: "8th October 2020"
-  time: "10:00am-17:00pm"
+  time: "10:00am - 17:00pm UTC - 3"
   bannerurl: "latinr_banner.png"
   registration_url: https://www.eventbrite.com.ar/o/reprohack-en-latinr-31351318695 
   hackpad_url: http://bit.ly/reprohack_latinr2020
