--- a/README.Rmd
+++ b/README.Rmd
@@ -1,193 +1,98 @@
----
-output: github_document
-params: 
-  title: "N8 CIR 'Northern Tour' ReproHack series"
-  room_location: "Multiple locations"
-  address: "Newcastle, York, Leeds, Sheffield, Manchester"
-  date: "21 Jan - 12 Mar 2020"
-  time: "10:00am-17:00pm"
-  bannerurl: "https://github.com/reprohack/reprohack-hq/raw/master/assets/reprohack-banner.png"
-  latitude: 53.38119
-  longitude: -1.48036
-  registration_url: null
-  hackpad_url: https://bit.ly/remote-reprohack-hackpad
-  intro_slides_url: "https://annakrystalli.me/n8cir-reprohacks/slides/#1"
-  submission_url: https://forms.gle/vMk25vCevMg2QiYQ9
-  feedback_url: https://forms.gle/wvXfjNT7HbkqH2Rj7
-  paper_shinyapp_url: https://sheffield-university.shinyapps.io/n8cir-reprohacks/
-  reprohack_repo_url: https://github.com/annakrystalli/n8cir-reprohacks
----
-
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
-```
+![](https://github.com/flor14/latinr-reprohack/blob/master/reprohack_latinr_banner.png)
 
+# **ReproHack en LatinR 2020**\!
 
-![](`r params$bannerurl`)
-
-# Welcome to the **`r params$title`**!
-
-<br>
-
-#### :date: **`r params$date`**
-#### :alarm_clock: **`r params$time`**
-
-##### :round_pushpin: **`r params$room_location`**
-##### :earth_africa: **`r params$address`**
-  
-
-
-
-```{r out.width='60%', fig.height=3, eval=require('leaflet'), echo=FALSE, message=FALSE, warning=FALSE}
-library(leaflet)
-library(dplyr)
-
-event_log <- readr::read_csv("data/event-log.csv") %>% 
-    mutate(upcoming =  date >= Sys.Date()) %>%
-    mutate(popup = glue::glue("<h3><a href={url} {title}></h3><br>{date}"),
-           date_f = format(date, format="%a %b %d %Y"))
-
-plot_log <- event_log %>%
-    mutate(color = case_when(upcoming == TRUE ~ "green",
-                             upcoming == FALSE ~ "orange"))
-
-
-#pal <- colorFactor(c("green", "orange"), c(FALSE, TRUE))
-
-make_popup <- function(df){
-    popup_row <- function(x){paste0(
-      "<h3><a href=", x["url"], "> ", x["title"],"</a></h3>", " <br>", 
-      "<strong> Date: </strong>", x["date_f"], "<br>",
-      "<strong> Room: </strong>", x["room"], "<br>",
-      "<strong> Address: </strong>", x["address"], "<br>")}
-    apply(df, 1, popup_row)
-}
-
-icons <- awesomeIcons(
-  icon = 'ios-close',
-  iconColor = 'black',
-  library = 'ion',
-  markerColor = plot_log$color
-)
-
-plot_log %>%
-    leaflet() %>%
-    addProviderTiles("CartoDB.Positron") %>%
-    addAwesomeMarkers(icon = icons, popup = make_popup(plot_log))
-```
-
-  
 [![Slack](https://img.shields.io/badge/slack-join%20us-brightgreen)](https://reprohack-autoinvite.herokuapp.com/)
-
-***
-
-
 <br>
 
-We are all excited by the progress made by many authors to **make their papers reproducible by publishing associated code and data**. 
+#### :date: **8 de octubre de 2020** - :alarm\_clock: **10:00am-17:00pm UTC-3** - :round\_pushpin: **Evento online** - :earth\_africa: **LatinR 2020**
 
-We know how challenging it can be so we **want to showcase the value of the practice**, both for original authors and as a learning experience for those who attempt to reproduce the work.
+-----
 
-It's imperative to note that  **ReproHacks are by no means an attempt to criticise or discredit work**. We see reproduction as **beneficial scientific activity in itself**, with useful outcomes for authors and valuable learning experiences for the participants and the research community as a whole.
+Muchos autores realizan el esfuerzo de **dejar sus artículos reproducibles mediante la publicación de código y datos asociados**. Sabemos lo desafiante que puede ser, por eso **queremos mostrar el valor de la práctica** y brindar una experiencia de aprendizaje para quienes intentan reproducir el artículo científico en cuestión.
+Hay que tener en cuenta que **ReproHack no busca criticar o desacreditar el trabajo de los autores**. Vemos la reproducción como **beneficiosa
+actividad científica en sí misma**, dando devoluciones útiles para los autores y valiosas experiencias de aprendizaje para los participantes y comunidad de investigación en su conjunto.
 
+-----
 
-***
+## **Dos maneras de involucrarse:**
 
-## **Two ways to get involved:**
+### **[Proponer tu artículo](https://forms.gle/vMk25vCevMg2QiYQ9)**
 
-### **[Nominate a paper](`r params$submission_url`)**
+Invitamos a que propongas tu trabajo si has dejado **código** y **datos** disponibles públicamente. También fomentamos los análisis basados en
+herramientas de origen, ya que no podemos garantizar que los participantes tengan acceso a software con licencia especializado.
 
-We invite nominations for papers that have both associated **code** and **data** publicly available. We also encourage analyses based on open source tools as we cannot guarantee participants will have access to specialised licenced software.
+[**Lista actual de artículos propuestos**](https://sheffield-university.shinyapps.io/n8cir-reprohacks/)
 
-[**Current list of proposed papers and projects**](`r params$paper_shinyapp_url`)
+![](https://github.com/flor14/latinr-reprohack/blob/master/latinr.png)
+-----
 
-<br>
+## **El evento**
 
+### Materiales
 
-```{r, echo = F, results='asis'}
-if(!is.null(params$registration_url)){
-  cat(paste0("### [**REGISTER as a participant**](", params$registration_url, ")"))
-}
-```
+  - [**Introducción Diapositivas**](https://flor14.github.io/latinr-reprohack/docs/index.html#1)
+    Instrucciones y enlaces
+  - [**Lista de artículos**](https://sheffield-university.shinyapps.io/latinr2020-reprohack/)
+    Lista de trabajos postulados por sus autores
+  - [**EtherPad**](https://etherpad.wikimedia.org/p/reprohack_latinr2020)
+    Cuaderno colaborativo para el día del evento
+  - [**Formulario de comentarios**](https://forms.gle/b8TvEMxeeUY9gDFz7) 
+    Registro comentarios para los autores
 
-Join us at the hack to **dig into exciting science**, learn more about **reproducibility**, working with **other people's code and data** and more!
+Nos esforzamos por hacer que este evento sea abierto e inclusivo. Como tal, el evento se rige por el [Código de Conducta](https://github.com/reprohack/reprohack-hq/blob/master/CODE_OF_CONDUCT.md) y debes leerlo antes de participar. Al participar, asumiremos que aceptas nuestro CoC. 
 
-***
+### **Autores**
 
+Animamos a los autores interesados a estar en contacto. Pueden hacerlo por unirse al canal **`review-chat`** en nuestro [**Slack**](https://reprohack-autoinvite.herokuapp.com/). 
 
-## **On the day**
+### **Participantes**
 
-### Materials
+#### **Introducción y bienvenida** [diapositivas](https://flor14.github.io/latinr-reprohack/docs/index.html#1)
 
-- [**Intro Slides**](`r params$intro_slides_url`) Instructions and links
-- [**Paper list**](`r params$paper_shinyapp_url`) List of submitted papers
-- [**Hackpad**](`r params$hackpad_url`) Event collaborative notebook
-- [**Feedback form**](`r params$feedback_url`) Record feedback for authors
+#### **1. Revisión de trabajos y formación de equipos**
 
+Comenzaremos con una breve revisión de los [**artículos propuestos**](https://sheffield-university.shinyapps.io/latinr2020-reprohack/) y luego formar equipos. Siéntase libre de trabajar por su cuenta si lo prefiere.
 
-This is the master repo of the hack. We'll collect information on the teams and projects, track discussions and collaborative notes on the event [**hackpad**](`r params$hackpad_url`)
+#### **2. Seleccione y registre un trabajo**
 
-As all ReproHack events, we strive to make this event open and inclusive to all. As such the event is governed by the [ReproHack Code of Conduct](https://github.com/reprohack/reprohack-hq/blob/master/CODE_OF_CONDUCT.md) and you should read it before participating. By participating, you are expected to uphold this code.
+  - Agregue sus datos en la sección **participantes** del [**EtherPad**](https://etherpad.wikimedia.org/p/reprohack_latinr2020) así tenemos un
+    lista completa de participantes.
 
+  - **Decida/n en qué artículo** desean trabajar.
 
+  - **Registre su equipo y el artículo elegido** registrando el título del artículo seleccionado y el nombre(s) de los revisores en el [**EtherPad**](https://etherpad.wikimedia.org/p/reprohack_latinr2020). Puedes usar la siguiente plantilla:
+    
+        **Trabajo:** <Título del artículo reproducido>
+        **Revisores:** Revisor 1, Revisor 2, etc.
 
-### **Authors**
+#### **3. ¡Trabaja en el artículo que seleccionaste!**
 
-We encourage authors that are keen, to be available for participants to reach out to for guidance or even just to say hello! You can do so by joining the **`review-chat`** channel in our [**slack**](https://reprohack-autoinvite.herokuapp.com/) group. We've also set up an **`authors`** channel in our [**slack**](https://reprohack-autoinvite.herokuapp.com/) group as a place where you can also reach the organisers prior to the hack. You can also start discussions or add comments through our collaborative [**hackpad**](`r params$hackpad_url`).
+Sigue las instrucciones/documentación asociada a tu artículo e intenta reproducir el trabajo. Tenga en cuenta los puntos principales sobre los cuales se proporcionarán comentarios a los autores caracterizando el artículo de acuerdo a: **Acceso**, **Reproducibilidad**, **Documentación** y **Reutilización**. Tal vez te serviría consultar el [formulario de comentarios a los autores](https://forms.gle/b8TvEMxeeUY9gDFz7) antes de comenzar. Sientete libre de usar el etherpad para compartir información general o hallazgos que desea compartir con el grupo.
 
-### **Participants**
+**Nos reuniremos durante el día** para discutir el progreso y discutir puntos conflictivos.
 
-#### **Introduction & Welcome** [slides](`r params$intro_slides_url`)
+#### **4. Deja comentarios para los autores**
 
-#### **1. Paper review and team formation**
+Complete el [**Formulario de comentarios para los autores**](https://forms.gle/wvXfjNT7HbkqH2Rj7). Por favor, sea 
+amable y constructivo con sus comentarios. La reproducibilidad es difícil y todos los autores que envían sus artículos han sido muy valientes por hacerlo. Aquí hay un [ejemplo](https://github.com/annakrystalli/write-ups/blob/master/assets/OpenCon_ReproHack%20feedback_form.pdf) de comentarios a los autores.
 
-We'll start with a brief review of the [**papers proposed**](`r params$paper_shinyapp_url`) and then form into teams. Feel free to work on your own if you prefer but we highly recommend you discuss your experiences with fellow participants as you work.
+#### **5. Comentarios al grupo sobre sus experiencias**
 
+Puede utilizar el etherpad para tomar notas y resumir sus experiencias.
 
-#### **2. Select and register a paper**
+#### **Comentarios finales**
 
-- Add your details in the **participants** section of the [**hackpad**](`r params$hackpad_url`) so we have a complete list of participants.
-- In your teams **decide which paper** you wish to work on.
-- **Register your team and paper** by logging the title of the selected paper and the name(s) of the reviewer(s) in the [**hackpad**](`r params$hackpad_url`). You can use the following template:
-  ```
-  ### **Paper:** <Title of the paper reproduced>
-  **Reviewers:** Reviewer 1, Reviewer 2 etc.
-  ```
+-----
 
+#### Toma de notas colaborativa:
 
-#### **3. Work on your paper!**
-
-Follow any instructions/documentation associated with the papers and try and reproduce the work. As you work through your paper, keep in mind the main points on which feedback to the authors will provided, **Access**, **Reproducibility**, **Documentation** and **Reusability**. It might help to have a look at the [feedback form](`r params$feedback_url`) before you begin and keep notes during. Feel free to use the event hackpad to record general findings you wish to share with the group.
-
-We'll **come together during the day** to discuss progress and troubleshoot any sticking points. 
-
-Should you finish reproducing your paper quickly, feel free to explore the work more deeply. For example, you could try and run additional analyses, create new plots or even combine materials with your own or other open materials available on the web!
-
-You might want to consider attempting to **replicate** the results, for example, if the code is in R consider translating the analysis to python and examining whether you are getting the same results. Such a contribution would be appropriate for publication in the **ReScience C** journal! Have a look at the journals [website](http://rescience.github.io/write/) for further details. 
-
-Should you produce any additional materials relating to your reproduction during the session, we ask that you **share it publicly** and **add any links to such materials to the hackpad**.
-
-#### **4. Leave feedback for the authors**
-
-Please complete the [**Reproducibility feedback form**](`r params$feedback_url`). Please also remember to be kind and constructive. Reproducibilty is hard and all authors submitting their papers have been incredibly brave. Here's an [example](https://github.com/annakrystalli/write-ups/blob/master/assets/OpenCon_ReproHack%20feedback_form.pdf) of feedback to authors.
+No dude en contribuir con cualquier comentario adicional sobre nuestra colaboración [**EtherPad**](https://etherpad.wikimedia.org/p/reprohack_latinr2020). Estos pueden ayudar a generar un blogpost del evento.
 
 
-#### **5. Feedback to the group on your experiences**
-
-You can use the hackpad to take notes and summarise your experiences.
-
-#### **Closing Remarks**
-
-***
-
-#### Collaborative note taking:
-
-Feel free to contribute any additional thoughts on our collaborative [**hackpad**](`r params$hackpad_url`). These can help form the basis for a blogpost on the event.
-
-
-<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This
+work is licensed under a
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative
+Commons Attribution 4.0 International License</a>.
